trying to fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -275,13 +275,14 @@ body {
 }
 @media only screen and (min-width: 1000px) {
   .home-page {
+    height: 80vh;
     padding-bottom: 18vh;
   }
   .profile__name {
     font-size: 1.75rem;
   }
   .about__header {
-    font-size: 2.75rem;
+    font-size: 2.5rem;
     line-height: 70px;
   }
 }
