--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -155,6 +155,7 @@
 @media only screen and (min-width: 1000px){
 
     .home-page{
+        height: 80vh;
         padding-bottom: 18vh;
     }
 
@@ -163,7 +164,7 @@
     }
 
     .about__header{
-        font-size:2.75rem;
+        font-size:2.5rem;
         line-height: 70px;
     }
 
